doc: Fix docs layout & issues on mobile
Should be a tolerable experience on mobile/small screens now..

--- a/doc/ldoc.css
+++ b/doc/ldoc.css
@@ -102,8 +102,8 @@ span.parameter:after { content:":"; }
 span.types:before { content:"("; }
 span.types:after { content:")"; }
 .type { font-weight: bold; font-style:italic }
-body, p, td, th { font-size: 1rem; line-height: 1.2rem;}
-p, ul { margin: 10px 0 0 0px;}
+body, p, td, th { font-size: 1rem; line-height: 1.2;}
+p, ul { margin: 10px 0 0 0;}
 strong { font-weight: bold;}
 em { font-style: italic;}
 h1 {
@@ -130,7 +130,12 @@ hr {
 }
 blockquote { margin-left: 3em; }
 ul { list-style-type: disc; }
-ul.examples { list-style-type: none; }
+ul.examples { 
+    list-style-type: none;
+}
+ul.examples > li { 
+    min-width: 0;
+}
 p.name {
     font-family: "Andale Mono", monospace;
     padding-top: 1rem;
@@ -142,12 +147,14 @@ pre {
     margin-left: 0; 
     overflow: auto;
     font-family: "Andale Mono", monospace;
+    white-space: break-spaces;
 }
 pre.section-example {
     margin-left: 1rem;
 }
 pre.example {
     font-size: .85rem;
+    white-space: pre;
 }
 pre.signature {
     padding: 0.4rem;
@@ -208,6 +215,7 @@ body::after {
 #navigation li li a { }
 #content {
     flex: 0 1 52rem;
+    min-width: 0;
     /* padding: 1rem; */
 }
 #content.verbatim-html {
@@ -219,12 +227,27 @@ body::after {
     background-color: var(--bg-dark);
 }
 
-@media screen and (max-width: 40rem) {
+@media screen and (max-width: 555px) {
     body {
         align-items: flex-start;
     }
     #content {
-        padding: 0.4rem;
+        min-width: 100vw;
+    }
+    pre {
+        font-size: 0.85rem;
+        padding: 0.5rem;
+        margin: 0.5rem;
+    }
+    pre.example {
+        font-size: 0.7rem;
+    }
+    ul {
+        padding-left: 0.8rem;
+    }
+    dl.table dd,
+    dl.function dd {
+        margin-left: 0.5rem !important;
     }
 }
 
@@ -273,14 +296,20 @@ div.section-content {
     margin-left: 0.5rem;
 }
 
-table.module_list td, 
-table.function_list td, { padding: 3px; }
+div.toc_list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    overflow: auto;
+}
 
-table.module_list td.name,
-table.function_list td.name {
-    line-height: 1.3;
+div.toc_list > div {
+    margin: 1.5px;
+}
+
+div.toc_list > div:nth-child(odd) {
     background-color: var(--bg-dark);
-    min-width: 12rem;
+    line-height: 1.3;
+    white-space:nowrap;
 }
 
 ul.nowrap {
